<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Beranda">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="110sp"
            android:layout_height="110sp"
            android:layout_marginTop="692dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/hitam"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.053"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/orghitambelajar" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="692dp"
            android:layout_marginEnd="6dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/juara"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.117"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="110sp"
            android:layout_height="110sp"
            android:layout_marginTop="572dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/hitam"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.053"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/orghitambelajar" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="243dp"
            android:layout_height="76dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="604dp"
            android:layout_marginEnd="6dp"
            android:fontFamily="@font/poppins"
            android:gravity="start"
            android:singleLine="false"
            android:text="@string/juaradesc"
            android:textAlignment="viewStart"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.285"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="165sp"
            android:layout_height="165sp"
            android:layout_marginTop="168dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/anak"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.934"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/anakbelajar" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="165dp"
            android:layout_height="165dp"
            android:layout_marginTop="168dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/hitam"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.069"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/orghitambelajar" />

        <TextView
            android:id="@+id/nama_univ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/nama_univ"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="41dp"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/logoyutiem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.851"
            app:layout_constraintStart_toEndOf="@+id/nama_univ"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/smalllogo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/title_activity_beranda"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nama_univ" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/kegiatan"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.053"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="165dp"
            android:layout_height="165dp"
            android:layout_marginTop="356dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/hitam"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.065"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/orghitambelajar" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="165sp"
            android:layout_height="165sp"
            android:layout_marginTop="356dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/anak"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.934"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/anakbelajar" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="528dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/artikel"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="110sp"
            android:layout_height="110sp"
            android:layout_marginTop="816dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/hitam"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.056"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/orghitambelajar" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="572dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/juara"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.111"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="246dp"
            android:layout_height="77dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="724dp"
            android:layout_marginEnd="6dp"
            android:fontFamily="@font/poppins"
            android:gravity="start"
            android:singleLine="false"
            android:text="@string/juaradesc"
            android:textAlignment="viewStart"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.222"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="227dp"
            android:layout_height="20dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="816dp"
            android:layout_marginEnd="6dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/juara"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.111"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="243dp"
            android:layout_height="72dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="852dp"
            android:layout_marginEnd="6dp"
            android:fontFamily="@font/poppins"
            android:gravity="start"
            android:singleLine="false"
            android:text="@string/juaradesc"
            android:textAlignment="viewStart"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.172"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Add more views here as needed -->

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>